--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toc-sandbox",
+  "name": "that-open-master",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/three": "0.156.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.10"
   },
   "dependencies": {
-    "uuid": "^9.0.1"
+    "bim-fragment": "1.0.22",
+    "openbim-components": "1.1.5",
+    "three": "0.152.2",
+    "uuid": "^9.0.1",
+    "web-ifc": "0.0.44"
   }
 }
